# gsft_control

./: 2018-01-08-12-22-05.bag  CMakeLists.txt  LICENSE  README.md  history_command.txt  history_command_2.txt  history_command_OBC.txt  package.xml
Matlab_Asctec_Firefly/: 2018-01-08-11-01-45.bag  firefly_parameters.m
Matlab_Asctec_Firefly/FDD/: K_lqr_hovering_ENU.mat  code_fdd_gen.m  test_FDD_ENU.m  test_FDD_ENU_nonlinear.slx
Matlab_Asctec_Firefly/LQR_Hovering/: code_hovering_gen.m  lqr_hovering.slx  lqr_hovering.slx.autosave  lqr_hovering_test.slx
Matlab_Asctec_Firefly/LQR_Identification/: K_lqr_tracking_ENU.mat  analyse.m  bag_data.mat  code_iden_gen.m  code_identification_gen.m  firefly_param_test.m  lqr_iden_test_nonlinear.slx  lqr_iden_test_nonlinear.slx.autosave  lqr_identification.slx  lqr_identification.slx.autosave
Matlab_Asctec_Firefly/LQR_Synthesis/: K_lqr.mat  firefly_parameters.m  lqr_synthesis_ENU.m  lqr_test_ENU_linear.slx  lqr_test_ENU_nonlinear.slx
Matlab_Asctec_Firefly/LQR_Tracking/: K_lqr.mat  code_tracking_gen.m  lqr_tracking.slx  lqr_tracking_backup.slx  lqr_tracking_test.slx  lqr_tracking_test_linear.slx  lqr_tracking_test_nonlinear.slx
cfg/: ControllerDyn.cfg  FTC_controller_firefly.yaml  GS1_Dyn.cfg  controllerDyn.cfg  controllerGS1Dyn.cfg  controllerGS2Dyn.cfg  controllerGS5Dyn.cfg  controller_dyn.cfg
include/: common.h  nominal_controller.hpp  nominal_controller_node.hpp  parameters.h  parameters_ros.h  tnd_nominal_controller.h  tnd_nominal_controller_node.h
launch/: bsl_hovering_control.launch  bsl_hovering_test_Gazebo.launch  gazebo_gs_test_Gazebo.launch  gazebo_lqr_test_Gazebo.launch  gs1.launch  gs1_Gazebo.launch  lqr_control.launch  lqr_final_control.launch  lqr_final_test_Gazebo.launch  lqr_full_control.launch  lqr_full_test_Gazebo.launch  lqr_hovering_control.launch  lqr_hovering_test_Gazebo.launch  lqr_identification_control.launch  lqr_identification_test_Gazebo.launch  lqr_inner_control.launch  lqr_inner_test_Gazebo.launch  lqr_outer_control.launch  lqr_outer_test_Gazebo.launch  lqr_test_Gazebo.launch  lqr_tracking_control.launch  lqr_tracking_test_Gazebo.launch  nominal_control.launch  scenario1_gs_control.launch  scenario1_gs_test_Gazebo.launch  scenario1_lqr1khz_control.launch  scenario1_lqr1khz_test_Gazebo.launch  scenario1_lqr_control.launch  scenario1_lqr_test_Gazebo.launch  scenario2_gs_control.launch  scenario2_gs_test_Gazebo.launch  scenario2_lqr_control.launch  scenario2_lqr_test_Gazebo.launch  tuning_GS5_Gazebo.launch  tuning_compare_Gazebo.launch  tuning_gs1_Gazebo.launch  tuning_gs2.launch  tuning_gs2_Gazebo.launch  tuning_nominal.launch  tuning_nominal_Gazebo.launch  (+4 more)
msg/: LOE.msg  UAVState.msg  VirtualControl.msg  XYZYawError.msg
src/: bsl_hovering_controller_node.cpp  bsl_scenario1_controller_node.cpp  gazebo_gs_controller_node.cpp  gazebo_lqr_controller_node.cpp  gs1_node.cpp  lqr_final_controller_node.cpp  lqr_full_controller_node.cpp  lqr_hovering_controller_node.cpp  lqr_identification_controller_node.cpp  lqr_inner_controller_node.cpp  lqr_outer_controller_node.cpp  lqr_tracking_controller_node.cpp  main_node.cpp  matlab_lqr_controller_node.cpp  nominal_controller.cpp  nominal_controller_node.cpp  scenario1_gs_controller_node.cpp  scenario1_lqr1khz_controller_node.cpp  scenario1_lqr_controller_node.cpp  scenario2_gs_controller_node.cpp  scenario2_lqr_controller_node.cpp  tnd_nominal_controller_node.cpp  tuning_GS1_node.cpp  tuning_GS2_node.cpp  tuning_GS5_node.cpp  tuning_lqr_node.cpp  tuning_nominal_node.cpp  tunning_lqr_node.cpp  tunning_nominal_node.cpp
src/bsl_hovering_grt_rtw/: bsl_hovering.cpp  bsl_hovering.h  bsl_hovering_data.cpp  bsl_hovering_private.h  bsl_hovering_types.h  multiword_types.h  rtmodel.h  rtwtypes.h
src/bsl_scenario1_grt_rtw/: bsl_scenario1.cpp  bsl_scenario1.h  bsl_scenario1_data.cpp  bsl_scenario1_private.h  bsl_scenario1_types.h  multiword_types.h  rtmodel.h  rtwtypes.h
src/gazebo_gs_grt_rtw/: gazebo_gs.cpp  gazebo_gs.h  gazebo_gs_data.cpp  gazebo_gs_private.h  gazebo_gs_types.h  multiword_types.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtmodel.h  rtwtypes.h
src/gazebo_lqr_grt_rtw/: gazebo_lqr.cpp  gazebo_lqr.h  gazebo_lqr_data.cpp  gazebo_lqr_private.h  gazebo_lqr_types.h  multiword_types.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtmodel.h  rtwtypes.h
src/lqr_final_grt_rtw/: buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  defines.txt  lqr_final.cpp  lqr_final.h  lqr_final.mk  lqr_final_data.cpp  lqr_final_manifest.txt  lqr_final_private.h  lqr_final_types.h  modelsources.txt  multiword_types.h  rtmodel.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
src/lqr_firefly_grt_rtw/: buildInfo.mat  defines.txt  lqr_firefly.cpp  lqr_firefly.h  lqr_firefly_data.cpp  lqr_firefly_private.h  lqr_firefly_types.h  multiword_types.h  rtmodel.h  rtwtypes.h
src/lqr_full_grt_rtw/: buildInfo.mat  lqr_full.h  lqr_full.mk  lqr_full_data.cpp  lqr_full_manifest.txt  lqr_full_types.h  modelsources.txt  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
src/lqr_hovering_grt_rtw/: buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  lqr_hovering.cpp  lqr_hovering.h  lqr_hovering.mk  lqr_hovering_data.cpp  lqr_hovering_manifest.txt  lqr_hovering_private.h  lqr_hovering_types.h  multiword_types.h  rtmodel.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
src/lqr_identification_grt_rtw/: buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  lqr_identification.cpp  lqr_identification.h  lqr_identification.mk  lqr_identification_data.cpp  lqr_identification_manifest.txt  lqr_identification_private.h  lqr_identification_types.h  multiword_types.h  rtmodel.h  rtwtypes.h  rtwtypeschksum.mat
src/lqr_inner_grt_rtw/: buildInfo.mat  codeInfo.mat  compileInfo.mat  lqr_inner.cpp  lqr_inner.h  lqr_inner.mk  lqr_inner_data.cpp  lqr_inner_private.h  lqr_inner_types.h  modelsources.txt  multiword_types.h  rtmodel.h  rtwtypes.h
src/lqr_outer_grt_rtw/: buildInfo.mat  defines.txt  (+12 more)
(+666 files in other folders)
